# syslabcom.github-checks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/syslabcom_github_checks/contributors/: README.md  __main__.py  collector.py  config.py  models.py  output.py  queries.py  utils.py
src/syslabcom_github_checks/github_graphql/: README.md  __init__.py  auth.py  client.py  utils.py
tests/: conftest.py
tests/contributors/: test_collector.py  test_integration.py  test_main.py  test_models.py  test_output.py
tests/github_graphql/: test_auth.py  test_client.py  test_utils.py
