[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syslabcom.github-checks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "jmespath",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "flake8", "pre-commit"]

[project.scripts]
contributors-wanted = "syslabcom_github_checks.contributors.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: network-dependent tests"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
combine_as_imports = true
